# carvoice-bench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_dashscope.py  语音助手测试用例.xlsx
carvoice_bench/: __init__.py  cli.py  config.py
carvoice_bench/agent/: __init__.py  bench.py  evolution.py  execution.py  generator.py  llm.py  models.py  requirements.py  review.py  safety.py  storage.py  verdict.py
carvoice_bench/asr_bench/: __init__.py  engine.py  latency.py  wer.py
carvoice_bench/can_parser/: __init__.py  dbc.py  matcher.py  parser.py
carvoice_bench/online/: __init__.py  aliyun.py  audio_io.py
carvoice_bench/orchestrator/: __init__.py  metrics.py  timeline.py
carvoice_bench/report/: __init__.py  html_report.py  pdf_report.py  report_api.py
carvoice_bench/semantic/: __init__.py  cloud_parser.py  parser.py  rule_parser.py
carvoice_bench/tts_analyzer/: __init__.py  emotion.py  mos.py  prosody.py
carvoice_bench/ui_verifier/: __init__.py  detector.py  elements.yaml  template_matcher.py
carvoice_bench/utils/: audio.py  env.py  logger.py
datasets/: README.md
docs/: deep_agents_feasibility.md
examples/: agent_bench.yaml  agent_requirements.md  agent_rules.yaml  demo.py  mock_demo.py  test_plan.yaml
examples/mock_report/: asr_results.csv  report.html  report_data.json  tts_mos_scores.csv
scripts/: prepare_dataset.py
tests/: test_agent.py  test_all.py
